--- a/client/src/styles/narrowcastingcms.scss
+++ b/client/src/styles/narrowcastingcms.scss
@@ -1,7 +1,11 @@
 .slide-summary {
   &__description {}
 
-  &__header {}
+  &__header {
+    display: flex;
+    align-content: flex-end;
+    justify-content: flex-start;
+  }
 
   &__icon {
     margin-left: -2px;
@@ -19,12 +23,13 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    line-height: 2rem;
   }
 
   &__summary {
     color: #566b8d;
     line-height: 1.3;
-    margin-bottom: 0;
+    margin: .75rem 0 .5rem 2.8rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
